Kubernetes/K3S/UptimeKuma/kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1.23.13
          name: uptime-kuma
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: pvc-nfs-k3s-uptime-kuma-volume
              mountPath: /app/data
              subPath: uptime-kuma
      volumes:
        - name: pvc-nfs-k3s-uptime-kuma-volume
          persistentVolumeClaim:
            claimName: pvc-nfs-k3s-uptime-kuma
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-http
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/href: "https://uptime-kuma.k3s.wiserisk.be"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Uptime Kuma
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: uptime-kuma.svg
    gethomepage.dev/app: uptime-kuma
    gethomepage.dev/name: Uptime Kuma
    gethomepage.dev/widget.type: "uptimekuma"
    gethomepage.dev/widget.url: "https://uptime-kuma.k3s.wiserisk.be"
spec:
  rules:
    - host: uptime-kuma.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-svc
                port:
                  number: 3001
